--- a/css/style.css
+++ b/css/style.css
@@ -59,4 +59,36 @@ top: -5px;
 
 
 }
+.home{
+      /* Group 5 */
+position: absolute;
+width: 100%;
+height: 234px;
+left: 0px;
+top: 50px;
 
+
+}
+.home-text{
+
+/* Hey I’m Elizabeth a Full-stack Software Engineer. I’m Motivated by a profound passion for Technology and Strong willingness to Learn. */
+
+position: absolute;
+width: 35%;
+height: 139px;
+left: 51px;
+top: 48px;
+
+font-family: 'Source Code Pro';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 20px;
+text-align: center;
+
+color: #FFFFFF;
+
+
+
+
+}
